--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
     <title>Shema</title>
 
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script
       src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
       crossorigin></script>
